k8s/hanzo-network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: status-network
  labels:
    app: status-network
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: ingress
  tls:
    - hosts:
        - status.hanzo.network
      secretName: status-hanzo-network-tls
  rules:
    - host: status.hanzo.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: status
                port:
                  number: 80
